--- a/.config/i3blocks/config
+++ b/.config/i3blocks/config
@@ -38,13 +38,13 @@ label=📬
 interval=180
 signal=12
 
-#[memory]
-#interval=30
-#label=🧠
+[memory]
+interval=30
+label=🍜
 
-#[cpu]
-#interval=15
-#label=💻
+[cpu]
+interval=15
+label=💻
 
 [volume]
 interval=once
@@ -60,6 +60,10 @@ signal=10
 
 [battery]
 command=battery BAT0
+interval=5
+
+[battery]
+command=battery BAT1
 interval=5
 
 [clock]
